--- a/style.css
+++ b/style.css
@@ -93,4 +93,8 @@ h1 {
 .bookshelf-container {
   height: 100%;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
