--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h1 {
   color:aliceblue;
   position: absolute;
   margin-left: 1%;
+  z-index: 1;
 }
 
 #b1 {
@@ -60,20 +61,6 @@ h1 {
   top: 70%;
 }
 
-.splash {
-  position: absolute;
-  height: 60%;
-  width: 40%;
-  top: 30%;
-  left: 50%;
-  background-color: red;
-  opacity: 0.75;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-}
-
 .cal {
   position: absolute;
   top: 42%;
@@ -90,7 +77,8 @@ h1 {
 }
 
 /*Bookshelf*/
-.bookshelf-container {
-  height: 100%;
-  width: 100%;
+#sketch{
+  display: flex;
+  flex-direction: row;
+  height:100%;
 }
