--- a/style.css
+++ b/style.css
@@ -82,3 +82,45 @@ h1 {
   flex-direction: row;
   height:100%;
 }
+
+.book-left {
+    float: left;
+    width: 30%;
+    display: inline-block;
+      padding-left: 6%;
+      padding-top: 4%;
+      position: relative;
+      -webkit-transform: rotate(10deg) skew(10deg, 0);
+         -moz-transform: rotate(10deg) skew(10deg, 0);
+          -ms-transform: rotate(10deg) skew(10deg, 0);
+           -o-transform: rotate(10deg) skew(10deg, 0);
+              transform: rotate(10deg) skew(10deg, 0);
+    
+  }
+
+  .book-right{
+    float: right;
+    padding-right: 9%;
+    padding-left: 1%;
+    padding-top: 4%;
+    width: 22%;
+      display: inline-block;
+      margin-top: 1em;
+      position: relative;
+      -webkit-transform: rotate(-10deg) skew(-10deg, 0);
+         -moz-transform: rotate(-10deg) skew(-10deg, 0);
+          -ms-transform: rotate(-10deg) skew(-10deg, 0);
+           -o-transform: rotate(-10deg) skew(-10deg, 0);
+              transform: rotate(-10deg) skew(-10deg, 0);
+  }
+
+  .book {
+    padding-right: 9%;
+    padding-left: 1%;
+    padding-top: 4%;
+    width: 22%;
+      display: inline-block;
+      margin-top: 1em;
+      position: relative;
+    background-color: 'white';
+  }
