--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ h1 {
 
 .book-left {
     float: left;
-    width: 30%;
+    width: 12%;
+    height: 50%;
     display: inline-block;
       padding-left: 6%;
       padding-top: 4%;
@@ -103,7 +104,8 @@ h1 {
     padding-right: 9%;
     padding-left: 1%;
     padding-top: 4%;
-    width: 22%;
+    width: 10%;
+    height: 50%;
       display: inline-block;
       margin-top: 1em;
       position: relative;
@@ -114,13 +116,6 @@ h1 {
               transform: rotate(-10deg) skew(-10deg, 0);
   }
 
-  .book {
-    padding-right: 9%;
-    padding-left: 1%;
-    padding-top: 4%;
-    width: 22%;
-      display: inline-block;
-      margin-top: 1em;
-      position: relative;
-    background-color: 'white';
+  #book_background {
+    z-index: 1;
   }
