--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ main {
   height: 100%;
 }
 
+/*Index*/
+
 .box {
   height: 150px;
   width: 150px;
@@ -37,7 +39,12 @@ main {
 }
 
 h1 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 24px;
+  background-color: white;
   color:black;
   position: absolute;
   margin-left: 1%;
@@ -130,6 +137,7 @@ a:visited {
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
     letter-spacing: 2px;
+    background-color: white;
     text-decoration: none;
     text-transform: uppercase;
     color: #000;
