--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ h1 {
   color: #000;
   border: 3px solid;
   padding: 0.25em 0.5em;
+  margin-left: 1%;
   box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
 }
 
